<resources>
    <string name="app_name">Game Tracker</string>
    <string name="login_account">Login to Account</string>
    <string name="create_account">Create Account</string>
    <string name="username_edit_text_text">Username</string>
    <string name="username_text_view_text">Username</string>
    <string name="password_text_view_text">Password</string>
    <string name="create_account_button">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="add_game_button">Add Game</string>
    <string name="name_of_game_hint">Name of Game</string>
    <string name="time_played_in_hours">Time Played in Hours</string>
    <string name="have_you_completed_the_game">Have you completed the game?</string>
    <string name="complete_switch_text">Have you completed the game?</string>
    <string name="admin_screen">Admin Screen</string>
    <string name="delete_account">Delete Account</string>
</resources>